# wordpress-blog-metadata-organize

./: .env.example  LICENSE  README.md  pyproject.toml
data/: llm_link_suggestions.json  original_posts.json  original_taxonomy.json
src/auth/: auth_get_token.py
src/notebooks/: generate_new_links.ipynb  llm_taxonomy_update.ipynb  organize_metadata.ipynb
src/utils/: helper.py
