[tool.poetry]
name = "wordpress-blog-metadata-organizer"
version = "0.1.0"
description = "A tool to enhance WordPress.com blog content using NLP and ML techniques""
authors = ["Fırat Gelbal <firat.gelbal@automattic.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
requests-oauthlib = "^2.0.0"
python-dotenv = "^1.0.1"
haystack-ai = "^2.5.0"
transformers = "^4.44.2"
anthropic = "^0.34.2"
anthropic-haystack = "^1.0.0"
pydantic = "1.10.14"
sentence-transformers = "^3.0.1"
ollama-haystack = "^1.0.0"
colorama = "^0.4.6"
scikit-learn = "^1.5.2"
numpy = "^1.21.0"
torch = "^1.10.0"
beautifulsoup4 = "^4.10.0"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.2.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
